test/invalid-syntax/plz/very-with-no-args.djs
very foo is plz bar with
